# simpleconf

./: README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: walkthrough.ipynb
src/liteconf/: __init__.py  core.py  errors.py  exceptions.py  loader.py  manager.py  merger.py  namespaces.py  sources.py
src/simpleconf/: __init__.py  core.py  errors.py  exceptions.py
tests/: conftest.py  test_loader.py  test_manager.py
tests/fixtures/base/: notifier.yml
tests/fixtures/local/: notifier.yml
